Renders service incorrectly

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
-<div>Zillow</div>
-<div id="app"></div>
+
+<head></head>
+
+<body>
+  <div>Zillow</div>
+  <div id="app"></div>
+</body>
+<script src="http://localhost:3001/bundle.js"></script>
 </html>
