Fixes cors error and loads css from service

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
-<head></head>
+<head>
+  <title>Zillowish</title>
+  <link href="http://localhost:3001/style.css" rel="stylesheet">
+</head>
 
 <body>
   <div>Zillow</div>
