--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div>Zillow</div>
+  <div>Zillowish</div>
   <div id="app"></div>
 </body>
 <script src="http://localhost:3001/bundle.js"></script>
