--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
 
 <body>
   <div>Zillowish</div>
-  <div id="app"></div>
+  <!-- <div id="jessicaSerice"></div> -->
+  <div id="description"></div>
+  <!-- <div id="cliftonSerice"></div> -->
 </body>
 <script src="http://localhost:3001/bundle.js"></script>
 </html>
