placeholders for jessica's service

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 <head>
   <title>Zillowish</title>
   <link href="http://localhost:3001/style.css" rel="stylesheet">
+  <!-- <link href="http://localhost:3002/style.css" rel="stylesheet"> -->
 </head>
 
 <body>
   <div>Zillowish</div>
-  <!-- <div id="jessicaSerice"></div> -->
+  <!-- <div id="app"></div> -->
   <div id="description"></div>
   <!-- <div id="cliftonSerice"></div> -->
 </body>
 <script src="http://localhost:3001/bundle.js"></script>
+<!-- <script src="http://localhost:3002/bundle.js"></script> -->
 </html>
